adds rendering
