# api/v1alpha/env.swagger.json
@@ -189,6 +189,32 @@
         ]
       }
     },
+    "/v1alpha/envs/{id}/render": {
+      "get": {
+        "summary": "RenderEnv the current environment state.",
+        "operationId": "RenderEnv",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1alphaRenderEnvResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "ID of the environment.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "EnvironmentAPI"
+        ]
+      }
+    },
     "/v1alpha/envs/{id}/reset": {
       "put": {
         "summary": "Reset an environment.",
@@ -719,6 +745,16 @@
         }
       },
       "title": "The multi-discrete action space consists of a series of discrete action spaces with different number of actions in eachs.\n- It is useful to represent game controllers or keyboards where each key can be represented as a discrete action space\n- It is parametrized by passing an array of positive integers specifying number of actions for each discrete action space\nNote: Some environment wrappers assume a value of 0 always represents the NOOP action.\ne.g. Nintendo Game Controller\n- Can be conceptualized as 3 discrete action spaces:\n   1) Arrow Keys: Discrete 5  - NOOP[0], UP[1], RIGHT[2], DOWN[3], LEFT[4]  - params: min: 0, max: 4\n   2) Button A:   Discrete 2  - NOOP[0], Pressed[1] - params: min: 0, max: 1\n   3) Button B:   Discrete 2  - NOOP[0], Pressed[1] - params: min: 0, max: 1"
+    },
+    "v1alphaRenderEnvResponse": {
+      "type": "object",
+      "properties": {
+        "frame": {
+          "$ref": "#/definitions/v1alphaTensor",
+          "description": "Frame is the rgb array of the environment."
+        }
+      },
+      "description": "Response with rgb array of environment state."
     },
     "v1alphaResetEnvRequest": {
       "type": "object",
